# text-printer

./: .travis.yml  README.md  appveyor.yml  stack.yaml  text-printer.cabal
src/: Integral.hs  M.hs
src/Text/: Printer.hs
src/Text/Printer/: Fractional.hs  Integral.hs  Numerals.hs
tests/: Tests.hs
