Name: text-printer
Version: 0.5
Category: Text
Stability: experimental
Synopsis: Abstract interface for text builders/printers.
Description:
  This package provides an interface for injecting text into monoids such as
  builders and printers.

Homepage: https://github.com/mvv/text-printer
Bug-Reports: https://github.com/mvv/text-printer/issues

Author: Mikhail Vorozhtsov <mikhail.vorozhtsov@gmail.com>
Maintainer: Mikhail Vorozhtsov <mikhail.vorozhtsov@gmail.com>
Copyright: 2013 Mikhail Vorozhtsov <mikhail.vorozhtsov@gmail.com>
License: BSD3
License-File: LICENSE

Cabal-Version: >= 1.10.0
Build-Type: Simple

Library
  Default-Language: Haskell2010
  Build-Depends:
    base >= 4.4 && < 5
  Hs-Source-Dirs: src
  GHC-Options: -Wall
  Exposed-Modules:
    M
